Fixed broken Contact navigation link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <a href="#services" class="btn btn-default btn-lg"><i class="fa fa-cogs fa-fw"></i> <span class="network-name">Services</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-compass fa-fw"></i> <span class="network-name">Contact</span></a>
+                                <a href="#contact" class="btn btn-default btn-lg"><i class="fa fa-compass fa-fw"></i> <span class="network-name">Contact</span></a>
                             </li>
                         </ul>
                     </div>
