Changed Service section image; Added Credits to index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<p>Our extensive knowledge of Microsoft's platform means we are ideally placed to help define flexible data architecture for your business.</p>					                          
 				</div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/imac-services.png" alt="">
                 </div>
             </div>
         </div>
@@ -196,7 +196,10 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; CodeMagix Ltd. 2015-2016 All Rights Reserved</p>
+                    <p class="copyright text-muted small">
+                    Copyright &copy; CodeMagix Ltd. 2015-2016 All Rights Reserved
+                    <span class="pull-right">Credits: <a href="https://startbootstrap.com/template-overviews/landing-page/" target="_blank">Landing Page @ Start Bootstrap</a> | <a href="https://www.pexels.com/">www.pexels.com/</a> 
+                    </span></p>
                 </div>
             </div>
         </div>
